--- a/3-nft-preview-card-component/style.css
+++ b/3-nft-preview-card-component/style.css
@@ -12,7 +12,9 @@
   --clr-white: 0 0% 100%;
 
   /* Font size */
-  --fs-400: 1.2rem;
+  --fs-300: 0.8rem;
+  --fs-400: 0.9rem;
+  --fs-600: 1.3rem;
 
   /* Font family*/
   /* Weights 300, 400, 600 */
@@ -55,14 +57,176 @@ picture {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   background-color: hsl(var(--clr-very-dark-blue));
   font-family: var(--ff-1);
   font-size: var(--fs-400);
   color: hsl(var(--clr-white));
   line-height: 1.5;
+}
+
+section {
   min-height: 100vh;
 }
+
+/* ------------------- */
+/* Utility             */
+/* ------------------- */
+
+/* Fonts */
+h1 {
+  font-size: var(--fs-600);
+}
+
+p {
+  font-weight: 300;
+  line-height: 1.7;
+}
+
+a {
+  color: hsl(var(--clr-white));
+}
+
+a:hover {
+  color: hsl(var(--clr-cyan));
+  cursor: pointer;
+}
+
+hr {
+  border: none;
+  height: 1px;
+  background-color: hsl(var(--clr-white) / 0.1);
+}
+
+/* General */
+.flex {
+  display: flex;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-space-between {
+  justify-content: space-between;
+}
+
+.flex-align-center {
+  align-items: center;
+}
+
 /* ------------------- */
 /* Components          */
 /* ------------------- */
+.card {
+  width: 300px;
+  background-color: hsl(var(--clr-blue));
+  padding: 20px;
+  border-radius: 15px;
+}
+
+.card--img-container {
+  position: relative;
+}
+
+.card--img-main {
+  border-radius: 15px;
+  margin-bottom: 1.5em;
+  transform: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.card--img-over-bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  border-radius: 15px;
+  background-color: hsl(var(--clr-cyan));
+}
+
+.card--img-over-center {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.card--img-container:hover .card--img-over-bg {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.card--img-container:hover .card--img-over-center {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.card--title {
+  margin-bottom: 0.7em;
+}
+
+.card--desc {
+  color: hsl(var(--clr-soft-blue));
+  margin-bottom: 1em;
+}
+
+.card--stats {
+  margin-bottom: 20px;
+}
+
+.card--currency {
+  color: hsl(var(--clr-cyan));
+  font-weight: 800;
+  font-size: var(--fs-300);
+  margin-left: 10px;
+}
+
+.card--img-ethereum {
+  width: 10px;
+}
+
+.card--time {
+  color: hsl(var(--clr-soft-blue));
+  margin-left: 5px;
+}
+
+.card--img-clock {
+  width: 17px;
+}
+
+hr {
+  margin-bottom: 20px;
+}
+
+.card--profile {
+  margin-bottom: 15px;
+}
+
+.card--profile-img {
+  width: 35px;
+  border: solid 0.5px white;
+  border-radius: 30px;
+}
+
+.card--author {
+  margin-left: 15px;
+}
+/* ------------------- */
+/* Layout              */
+/* ------------------- */
+footer {
+  text-align: center;
+}
