--- a/4-order-summary-component/style.css
+++ b/4-order-summary-component/style.css
@@ -1,3 +1,142 @@
 /* ------------------- */
 /* Custom properties   */
 /* ------------------- */
+:root {
+  /* Colors */
+  --clr-pale-blue: 225 100% 94%;
+  --clr-very-pale-blue: 225 100% 98%;
+  --clr-desaturated-blue: 224 23% 55%;
+  --clr-bright-blue: 245 75% 52%;
+  --clr-dark-blue: 223 47% 23%;
+
+  /* Font size */
+  --fs-300: 0.8rem;
+  --fs-400: 1rem;
+  --fs-600: 1.5rem;
+
+  /* Font family */
+
+  /* Font Weight: 500, 700, 800 */
+  --ff-1: "Red Hat Display", sans-serif;
+}
+
+/* ------------------- */
+/* Reset               */
+/* ------------------- */
+
+/* Box sizing */
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+img,
+picture {
+  display: block;
+  width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+body,
+picture,
+img {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  font-weight: 500;
+}
+
+body {
+  color: hsl(var(--clr-dark-blue) / 0.9);
+  font-family: var(--ff-1);
+  font-weight: 500;
+  line-height: 1.3;
+  background-image: url("images/pattern-background-mobile.svg");
+  background-color: hsl(var(--clr-pale-blue));
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (min-width: 600px) {
+  body {
+    background-image: url("images/pattern-background-desktop.svg");
+  }
+}
+
+/* ------------------- */
+/* Utility             */
+/* ------------------- */
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+/* ------------------- */
+/* Component           */
+/* ------------------- */
+
+.card {
+  width: 350px;
+  border-radius: 15px;
+  background-color: white;
+}
+
+.card--img-main {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.card--container {
+  padding: 40px;
+}
+
+.card--title {
+  text-align: center;
+  margin-bottom: 0.6em;
+}
+
+.card--desc {
+  text-align: center;
+  margin-bottom: 1.5em;
+}
+
+.card--subscription {
+}
+
+/* ------------------- */
+/* Layout              */
+/* ------------------- */
+
+/* General Text */
+h1 {
+  color: black;
+  font-size: var(--fs-600);
+  font-weight: 900;
+}
+
+p {
+  font-size: var(--fs-300);
+}
+
+.column {
+  min-height: 100vh;
+}
