--- a/4-order-summary-component/style.css
+++ b/4-order-summary-component/style.css
@@ -20,6 +20,14 @@
   --ff-1: "Red Hat Display", sans-serif;
 }
 
+@media (min-width: 600px) {
+  :root {
+    --fs-300: 1.3rem;
+    --fs-400: 1.5rem;
+    --fs-600: 2.5rem;
+  }
+}
+
 /* ------------------- */
 /* Reset               */
 /* ------------------- */
@@ -37,6 +45,7 @@ picture {
   width: 100%;
 }
 
+/* Text Resets */
 h1,
 h2,
 h3,
@@ -56,11 +65,36 @@ p {
   font-weight: 500;
 }
 
+/* General Text */
+h1 {
+  color: black;
+  font-size: var(--fs-600);
+  font-weight: 900;
+}
+
+p {
+  font-size: var(--fs-300);
+}
+
+a {
+  font-size: var(--fs-300);
+  color: hsl(var(--clr-bright-blue));
+}
+
+a:hover {
+  color: hsl(var(--clr-bright-blue) / 0.8);
+  text-decoration: none;
+}
+
+.black {
+  font-weight: 800;
+}
+
 body {
   color: hsl(var(--clr-dark-blue) / 0.9);
   font-family: var(--ff-1);
   font-weight: 500;
-  line-height: 1.3;
+  line-height: 1.7;
   background-image: url("images/pattern-background-mobile.svg");
   background-color: hsl(var(--clr-pale-blue));
   background-repeat: no-repeat;
@@ -87,6 +121,14 @@ body {
 
 .flex-center {
   justify-content: center;
+  align-items: center;
+}
+
+.flex-space-between {
+  justify-content: space-between;
+}
+
+.flex-align-center {
   align-items: center;
 }
 
@@ -119,24 +161,81 @@ body {
   margin-bottom: 1.5em;
 }
 
-.card--subscription {
+.card--sub {
+  background-color: hsl(var(--clr-very-pale-blue));
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 25px;
+}
+
+.card--plan-content {
+  margin-left: 15px;
+}
+
+.card--plan-title {
+  color: black;
+  width: 80px;
+}
+
+.card--plan-img {
+  width: 40px;
+}
+
+@media (min-width: 600px) {
+  .card {
+    width: 500px;
+  }
+
+  .card--container {
+    padding: 30px 60px;
+  }
+
+  .card--plan-title {
+    width: 120px;
+  }
+
+  .card--plan-img {
+    width: 60px;
+  }
+}
+
+button {
+  font-family: inherit;
+  font-size: var(--fs-300);
+  width: 100%;
+  padding: 1em 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-blue {
+  background-color: hsl(var(--clr-bright-blue));
+  color: white;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+}
+.btn-blue:hover {
+  background-color: hsl(var(--clr-bright-blue) / 0.8);
+}
+
+.card--payment-btn {
+  margin-bottom: 20px;
+}
+
+.btn-transparent {
+  background-color: transparent;
+  color: hsl(0 100% 0% / 0.7);
+}
+
+.btn-transparent:hover {
+  color: hsl(0 100% 0%);
 }
 
 /* ------------------- */
 /* Layout              */
 /* ------------------- */
 
-/* General Text */
-h1 {
-  color: black;
-  font-size: var(--fs-600);
-  font-weight: 900;
-}
-
-p {
-  font-size: var(--fs-300);
-}
-
-.column {
+.height {
   min-height: 100vh;
 }
