body image properties added for mobile and desktop

--- a/4-order-summary-component/style.css
+++ b/4-order-summary-component/style.css
@@ -104,6 +104,8 @@ body {
 @media (min-width: 600px) {
   body {
     background-image: url("images/pattern-background-desktop.svg");
+    background-repeat: repeat-x;
+    background-size: unset;
   }
 }
 
