--- a/7-easyBank/src/App.css
+++ b/7-easyBank/src/App.css
@@ -10,20 +10,40 @@
   --clr-light-grayish-blue: 220 16% 96%;
   --clr-very-light-gray: 0 0% 98%;
   --clr-white: 0 0% 100%;
+  --clr-light-white: 0 0% 98%;
+  --clr-light-gray: 220 16% 96%;
+  --clr-dark-gray: 252 2% 60%;
 
   /* Font sizes */
   --fs-200: 0.9rem;
   --fs-300: 1rem;
   --fs-400: 1rem;
   --fs-500: 1.2rem;
-  --fs-600: 1.2rem;
-  --fs-700: 1.5rem;
+  --fs-600: 1.6rem;
+  --fs-700: 2rem;
   --fs-800: 2rem;
-  --fs-900: 1.7rem;
-  --fs-1000: 3rem;
+  --fs-900: 2.5rem;
 
   /* Font Family */
   --ff-1: "Public Sans", sans-serif;
+}
+
+@media (min-width: 850px) {
+  :root {
+    --fs-800: 2.5rem
+  }
+}
+
+@media (min-width: 1100px) {
+  :root {
+    --fs-900: 3rem;
+  }
+}
+
+@media (min-width: 1300px) {
+  :root {
+    --fs-900: 3.5rem;
+  }
 }
 
 /* ------------------- */
@@ -43,6 +63,7 @@ html {
 
 body, h1, h2, h3, h4, h5, p, img, header {
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
@@ -52,28 +73,40 @@ a {
   cursor: pointer;
 }
 
+h1, h2, h3, h4, h5 {
+  line-height: 1.2;
+}
+
 h1 {
   font-size: var(--fs-900);
+  font-weight: 400;
 }
 
 h2 {
   font-size: var(--fs-800);
+  font-weight: 300;
 }
 
 h3 {
   font-size: var(--fs-700);
+  font-weight: 300;
 }
 
 h4 {
   font-size: var(--fs-600);
+  font-weight: 400;
 }
 
 h5 {
   font-size: var(--fs-500);
+  font-weight: 300;
 }
 
 p {
   font-size: var(--fs-400);
+  font-weight: 300;
+  line-height: 1.8;
+  color: hsl(var(--clr-dark-gray));
 }
 
 img {
@@ -83,6 +116,13 @@ img {
 
 body {
   font-family: var(--ff-1);
+  text-align: center;
+}
+
+@media (min-width: 850px) {
+  body {
+    text-align: left;
+  }
 }
 
 .home .nav nav ul,
@@ -105,12 +145,29 @@ body {
 }
 
 /* ------------------- */
+/* Components          */
+/* ------------------- */
+
+.primary-btn {
+  padding: 15px 30px;
+  border-radius: 30px;
+  border: none;
+  background: linear-gradient(90deg, rgba(49,211,92,1) 0%, rgba(43,183,218,1) 100%); 
+  color: hsl(var(--clr-white));
+  font-size: 16px;
+}
+
+.primary-btn:hover {
+  cursor: pointer;
+}
+
+/* ------------------- */
 /* General             */
 /* ------------------- */
 
 .container {
   max-width: 1400px;
-  margin: 0 auto;
+  margin-inline: auto;
   padding: 0 30px;
 }
 
@@ -118,29 +175,483 @@ body {
 /* Layout              */
 /* ------------------- */
 
+@media (max-width: 850px) {
+  .home .darken::after {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    left: 0;
+    top: 0;
+    z-index: 1;
+  }  
+}
 
 /* ------------------- */
 /* Navigation          */
 /* ------------------- */
 
-.home .nav {
-  padding-top: 30px;
+.nav {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: hsl(var(--clr-white));
+  z-index: 100;
+}
+
+
+.nav .flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav .logo {
+  width: 150px;
+}
+
+.nav .mobile-nav:hover {
+  cursor: pointer;
+}
+
+@media (min-width: 850px) {
+  .nav .mobile-nav {
+    display: none;
+  }
+}
+
+@media (max-width: 850px) {
+  .nav .mobile-nav {
+    font-size: 30px;
+    border: none;
+    background-color: hsl(var(--clr-white));
+  }
+
+  .nav .navbar {
+    display: none;
+  }
+
+  .nav .navbar.active {
+    display: block;
+    position: absolute;
+    left: 5%;
+    top: 100px;
+    width: 90%;
+    z-index: 100;
+    transition: transform 1s;
+  }
+
+  .nav .navbar.active .navbar-list {
+    display: block;
+    background-color: hsl(var(--clr-white));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+    border-radius: 5px;
+  }
+
+  .nav .navbar.active .navbar-list li a {
+    padding: 20px 20px;
+    display: block;
+    font-size: 20px;
+  }
+
+  .nav .navbar.active .navbar-list li a:not(:first-child) {
+    margin-top: 10px;
+  }
+
+  .nav .primary-btn {
+    display: none;
+  }
+}
+
+@media (min-width: 850px) {
+  .nav .navbar .navbar-list {
+    display: flex;
+    column-gap: 20px;
+  }
+}
+
+/* -------------------  */
+/* Hero                 */
+/* -------------------  */
+
+@media (min-width: 850px) {
+  .home .hero {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 89px;
+    align-items: center;
+  }
+}
+
+.home .hero .primaryImages {
+  position: relative;
+}
+
+@media (min-width: 850px) {
+  .home .hero {
+    max-width: 1400px;
+    margin-inline: auto;
+  }
+}
+
+.home .hero .primaryImages .desktop {
+  display: none;
+}
+
+.home .hero .primaryImages .phones {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-top: -150px;
+  z-index: 1;
+}
+
+@media (min-width: 500px) {
+  .home .hero .primaryImages .phones {
+    width: 500px;
+    margin-inline: auto;
+  }
+
+  .home .hero .primaryImages .mobile {
+    height: 600px;
+  }
+}
+
+@media (min-width: 850px) {
+  .home .hero .primaryImages .phones {
+    width: 450px;
+    margin-inline: auto;
+  }
+
+
+  .home .hero .primaryImages .mobile {
+    display: none;
+  }
+
+  .home .hero .primaryImages .desktop {
+    display: block;
+    width: 700px;
+    /* height: 100%; */
+    margin-right: -200px;
+    margin-top: -200px;
+  }
+  
+  .home .hero .primaryImages .phones {
+    left: unset;
+    margin-right: -80px;
+    margin-top: -50px;
+  }
+}
+
+@media (min-width: 950px) {
+  .home .hero .primaryImages .desktop {
+    width: 800px;
+  }
+
+  .home .hero .primaryImages .phones {
+    width: 500px;
+  }
+}
+
+@media (min-width: 1100px) {
+  .home .hero .primaryImages .desktop {
+    width: 850px;
+  }
+
+  .home .hero .primaryImages .phones {
+    width: 550px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .home .hero .primaryImages .desktop {
+    width: 1000px;
+  }
+
+  .home .hero .primaryImages .phones {
+    width: 650px;
+  }
+}
+
+.home .hero .container {
+  margin-top: -80px;
+}
+
+@media (min-width: 850px) {
+  .home .hero .container {
+    margin-top: 0px;
+    margin-inline: unset;
+  }
+}
+
+.home .hero .container .section {
+  padding-bottom: 80px;
+}
+
+@media (min-width: 450px) {
+  .home .hero .container .section {
+    max-width: 390px;
+    margin-inline: auto;
+  }
+}
+
+@media (min-width: 1300px) {
+  .home .hero .container .section {
+    max-width: 500px;
+    margin-inline: auto;
+  }
+}
+
+.home .hero .container .section .content h1 {
+  margin-bottom: 20px;
+}
+
+.home .hero .container .section .content p {
+  margin-bottom: 30px;
+}
+
+/* ------------------- */
+/* Choose Section      */
+/* ------------------- */
+
+.home .choose {
+  background-color: hsl(var(--clr-light-gray));
+  padding-top: 70px;
   padding-bottom: 30px;
 }
 
-.home .nav .flex {
+@media (min-width: 450px) {
+  .home .choose .container {
+    max-width: 390px;
+  }
+}
+
+@media (min-width: 850px) {
+  .home .choose .container {
+    max-width: 1400px;
+  }
+}
+
+.home .choose h2 {
+  margin-bottom: 20px;
+}
+
+.home .choose .subtitle {
+  margin-bottom: 70px;
+}
+
+@media (min-width: 850px) {
+  .home .choose .subtitle {
+    max-width: 600px;
+  }
+}
+
+@media (min-width: 850px) {
+  .home .choose .section {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px
+  }
+}
+
+.home .choose .section .column img {
+  width: 100px;
+  margin-inline: auto;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 850px) {
+  .home .choose .section .column img {
+    width: 60px;
+    margin-inline: unset;
+  }
+}
+
+.home .choose .section .column h4 {
+  margin-bottom: 20px;
+}
+
+.home .choose .section .column p {
+  padding-bottom: 40px;
+}
+
+/* ------------------- */
+/* Latest Articles     */
+/* ------------------- */
+
+.home .articles {
+  padding-top: 70px;
+  background-color: hsl(var(--clr-light-white));
+  padding-bottom: 40px;
+}
+
+@media (min-width: 850px) {
+  .home .articles {
+    padding-top: 6s0px;
+  }
+}
+
+.home .articles h3 {
+  margin-bottom: 30px;
+}
+
+.home .articles .articles-flex {
   display: flex;
+  flex-direction: column;
+  gap: 40px
 }
 
-.home .nav .not-active {
-  display: none;
+@media (min-width: 850px) {
+  .home .articles .articles-flex {
+    flex-direction: row;
+  }
 }
 
-.home .nav .logo {
-  width: 120px;
+.home .articles .article {
+  text-align: left;
+  background-color: hsl(var(--clr-white));
+  padding-bottom: 30px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.home .nav .primary {
-  display: none;
+@media (min-width: 450px) {
+  .home .articles .article {
+    max-width: 390px;
+    margin-inline: auto;
+  }
 }
 
+@media (min-width: 850px) {
+  .home .articles .article {
+    padding-bottom: 15px;
+  }
+}
+
+.home .articles .article img{
+  margin-bottom: 20px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+
+.home .articles .article .container {
+  max-width: unset;
+  margin-inline: auto;
+  padding: 0 15px;
+}
+
+@media (min-width: 500px) {
+  .home .articles .article .container {
+  padding: 0 40px;
+  }
+}
+
+@media (min-width: 850px) {
+  .home .articles .article .container {
+  padding: 0 10px;
+  }
+}
+
+.home .articles .article .container small {
+  display: block;
+  margin-bottom: 10px;
+  color: hsl(var(--clr-dark-gray));
+}
+
+.home .articles .article .container h5 {
+  line-height: 1.2;
+  margin-bottom: 10px;
+}
+
+.home .articles .article .container p {
+  line-height: 1.4;
+  font-size: 14px;
+}
+
+/* ------------------- */
+/* Footer              */
+/* ------------------- */
+
+.footer {
+  background-color: hsl(var(--clr-dark-blue));
+  padding-top: 30px;
+  padding-bottom: 40px;
+}
+
+@media (min-width: 850px) {
+  .footer .container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer .links {
+    display: flex;
+    gap: 60px
+  }  
+}
+
+@media (min-width: 1000px) {
+  .footer .links {
+    gap: 100px
+  }  
+}
+
+.footer .logo-socials img {
+  width: 130px;
+  margin-inline: auto;
+  margin-bottom: 25px;
+}
+
+.footer .logo-socials .socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 40px;
+}
+
+.footer .logo-socials .socials a {
+  color: white;
+  font-size: 30px;
+}
+
+@media (min-width: 850px) {
+  .footer .footer-nav {
+    display: flex;
+    gap: 80px
+  }
+}
+
+.footer .footer-nav ul li {
+  color: hsl(var(--clr-white));
+}
+
+.footer .footer-nav ul li {
+  margin-bottom: 20px;
+}
+
+.footer .footer-nav ul li a {
+  font-size: 16px;
+}
+
+.footer .footer-nav .secondary-nav {
+  margin-bottom: 40px;
+}
+
+.footer small {
+  display: block;
+  color: hsl(var(--clr-dark-gray));
+}
+
+.footer .primary-btn {
+  margin-bottom: 20px;
+}
