added: hover state for buttons and links

--- a/7-easyBank/src/App.css
+++ b/7-easyBank/src/App.css
@@ -159,6 +159,8 @@ body {
 
 .primary-btn:hover {
   cursor: pointer;
+  background: linear-gradient(90deg, rgba(115,215,142,1) 0%, rgba(111,201,223,1) 100%);
+
 }
 
 /* ------------------- */
@@ -267,6 +269,27 @@ body {
 
   .nav .primary-btn {
     display: none;
+  }
+}
+
+.nav .navbar .navbar-list li a {
+  position: relative;
+}
+
+.nav .navbar .navbar-list li a:hover::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  left: 0;
+  height: 5px;
+  border-radius: 2px;
+  background: linear-gradient(90deg, rgba(49,211,92,1) 0%, rgba(43,183,218,1) 100%);
+}
+
+@media (min-width: 850px) {
+  .nav .navbar .navbar-list li a:hover::before {
+    top: 200%;
   }
 }
 
@@ -524,6 +547,14 @@ body {
   border-bottom-right-radius: 10px;
 }
 
+.home .articles .article:hover {
+  cursor: pointer;
+}
+
+.home .articles .article:hover h5 {
+  color: hsl(var(--clr-line-green));
+}
+
 @media (min-width: 450px) {
   .home .articles .article {
     max-width: 390px;
@@ -597,6 +628,12 @@ body {
     display: flex;
     gap: 60px
   }  
+}
+
+.footer a:hover, 
+.footer a i:hover {
+  cursor: pointer;
+  color: hsl(var(--clr-line-green));
 }
 
 @media (min-width: 1000px) {
